--- a/genindex.html
+++ b/genindex.html
@@ -30,7 +30,7 @@
             <img src="_static/IIASA_logo.svg" class="logo" alt="Logo"/>
           </a>
               <div class="version">
-                v2023-10-23
+                v2023-10-27
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -82,30 +82,49 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#C"><strong>C</strong></a>
+ <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  | <a href="#Z"><strong>Z</strong></a>
  
 </div>
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-3">branch</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-4">cherry picking</a>
+</li>
       <li><a href="managing-code-and-data/introduction.html#index-0">code and data management</a>
 
       <ul>
         <li><a href="managing-code-and-data/workflows.html#index-0">(workflow)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/understanding-git.html#commit">commit</a>
+</li>
+      <li><a href="managing-code-and-data/understanding-git.html#commit">commit hash</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -145,9 +164,43 @@
       <li><a href="managing-code-and-data/the-git-ecosystem.html#index-0">Git</a>
 
       <ul>
+        <li><a href="managing-code-and-data/taming-git.html#index-9">(book)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-3">(branch)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-10">(built-in help)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-4">(cherry-pick)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-8">(clone)</a>
+</li>
+        <li><a href="managing-code-and-data/understanding-git.html#commit">(commit)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-9">(documentation)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-13">(graphical interfaces)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-0">(installing)</a>
+</li>
         <li><a href="managing-code-and-data/workflows.html#index-1">(LFS)</a>
 </li>
+        <li><a href="managing-code-and-data/taming-git.html#index-11">(manuals)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-4">(merge)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-0">(official client)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-12">(partial clone functionality)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-4">(rebase)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-1">(repository)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-7">(stash)</a>
+</li>
         <li><a href="managing-code-and-data/workflows.html#submodule-references">(submodule)</a>
+</li>
+        <li><a href="managing-code-and-data/release-management.html#index-1">(tag)</a>
 </li>
         <li><a href="managing-code-and-data/workflows.html#index-0">(workflow)</a>
 </li>
@@ -159,6 +212,14 @@
       <li><a href="IT-infrastructure/GitLab.html#gitlab">GitLab</a>
 </li>
       <li><a href="managing-code-and-data/good-practices-examples.html#index-0">good practices</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-6">index</a>
 </li>
   </ul></td>
 </tr></table>
@@ -175,6 +236,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="managing-code-and-data/workflows.html#index-2">merge request</a>
+</li>
+      <li><a href="managing-code-and-data/taming-git.html#index-4">merging</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -198,10 +261,34 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-4">rebasing</a>
+</li>
+      <li><a href="managing-code-and-data/release-management.html#index-0">release</a>
+
+      <ul>
+        <li><a href="managing-code-and-data/release-management.html#release-github-gitlab">(GitHub)</a>
+</li>
+        <li><a href="managing-code-and-data/release-management.html#release-github-gitlab">(GitLab)</a>
+</li>
+        <li><a href="managing-code-and-data/release-management.html#index-0">(management)</a>
+</li>
+        <li><a href="managing-code-and-data/release-management.html#release-manager">(manager)</a>
+</li>
+      </ul></li>
       <li><a href="managing-code-and-data/version-control.html#index-0">repository</a>
 
       <ul>
         <li><a href="managing-code-and-data/workflows.html#index-2">(fork)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-1">(Git)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-6">(index)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-2">(local)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#upstream">(upstream)</a>
+</li>
+        <li><a href="managing-code-and-data/taming-git.html#index-5">(workspace)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -214,6 +301,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-6">staging area</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-7">stash stack</a>
+</li>
       <li><a href="managing-code-and-data/workflows.html#submodule-references">submodule</a>
 </li>
   </ul></td>
@@ -222,6 +315,8 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/release-management.html#index-1">tagging</a>
+</li>
       <li><a href="managing-code-and-data/FAIR-principles.html#index-1">text</a>
 
       <ul>
@@ -232,6 +327,14 @@
         <li><a href="managing-code-and-data/FAIR-principles.html#index-3">(newlines)</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#upstream">upstream</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -252,6 +355,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="managing-code-and-data/workflows.html#index-0">workflow (code and data management)</a>
 </li>
+      <li><a href="managing-code-and-data/taming-git.html#index-5">working directory</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="managing-code-and-data/taming-git.html#index-5">workspace</a>
+</li>
+      <li><a href="managing-code-and-data/taming-git.html#index-5">worktree</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -259,7 +370,15 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="IT-infrastructure/Zenodo.html#zenodo">Zenodo</a>
+
+      <ul>
+        <li><a href="managing-code-and-data/release-management.html#zenodo-github">(GitHub integration)</a>
 </li>
+        <li><a href="managing-code-and-data/release-management.html#zenodo-metadata">(metadata)</a>
+</li>
+        <li><a href="managing-code-and-data/release-management.html#zenodo-release">(release management)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
