--- a/IT-infrastructure/GitLab.html
+++ b/IT-infrastructure/GitLab.html
@@ -129,7 +129,7 @@ Git HTTPS URL as follows: <code class="docutils literal notranslate"><span class
 <div class="admonition warning">
 <p class="admonition-title">Warning</p>
 <p>When you get an error such as <code class="docutils literal notranslate"><span class="pre">SSL:</span> <span class="pre">CERTIFICATE_VERIFY_FAILED</span></code> a working certificate has
-not been installed on the server side. To make things
+not been installed on the server side. To make things work
 while that is the case, you can use the <code class="docutils literal notranslate"><span class="pre">-c</span> <span class="pre">http.sslVerify=false</span></code>
 Git command line option or set the corresponding configuration setting on
 your repo. Do <strong>not</strong> do this for your global Git configuration: it is
